# laba1

./: CMakeLists.txt  IntSum.txt  VectorMult.txt  VectorSum.txt  exeptions.c  exeptions.h  filereader.c  filereader.h  main.c  ring.c  ring.h  tests.c  tests.h  vector.c  vector.h  vector_comp.c  vector_comp.h  vector_double.c  vector_double.h  vector_int.c  vector_int.h
